--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,14 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="drawingboard.css"/>
     <title>File upload</title>
+
 </head>
-<body>
-<form method="POST" enctype="multipart/form-data"
-      action="/upload">
-    File to upload:
-    <br>
-    <input type="file" name="file"><br><br> <input type="submit" value="Upload">
-</form>
+<body style="background: lightgrey">
+<!--<form method="POST" enctype="multipart/form-data"-->
+<!--action="/upload">-->
+<!--File to upload:-->
+<!--<br>-->
+<!--<input type="file" name="file"><br><br> <input type="submit" value="Upload">-->
+<!--</form>-->
+<p></p>
+<div id="drawing" style="width: 202px; height: 207px;"></div>
+<button onclick="imageDownload()">download</button>
+<button onclick="imageReset()">reset</button>
+<button onclick="imagePredict()">predict</button>
+<div id="prediction-container"></div>
 </body>
+<script src="jquery-3.3.1.js"></script>
+<script src="drawingboard.min.js"></script>
+<script src="tools.js"></script>
+
+<script>
+    let simpleDrawingBoard = new DrawingBoard.Board('drawing', {
+        controls: false,
+        webStorage: 'session',
+        size: 10,
+    });
+
+</script>
 </html>
