blob-approach: trash commit

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,6 +20,7 @@
         <button onclick="imageReset()">reset</button>
         <button onclick="imagePredict()">predict</button>
         <button onclick="imageReRender()">knopko!</button>
+        <button onclick="imagePredictAndRender()">Все вместе</button>
         <div id="prediction-container"></div>
     </div>
     <div id="re-render">
